--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,18 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
-  "keywords": ["vehicle", "booking", "nodejs", "express", "sequelize", "mysql"],
+  "keywords": [
+    "vehicle",
+    "booking",
+    "nodejs",
+    "express",
+    "sequelize",
+    "mysql"
+  ],
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.1",
